--- a/IoTAssignment/app/src/main/res/layout/activity_smart_parking.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_smart_parking.xml
@@ -32,4 +32,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/in_groundSensor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:contentDescription="@string/in_ground_sensor"
+        android:foreground="?android:selectableItemBackground"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stockIn"
+        app:srcCompat="@drawable/group_152" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
