--- a/IoTAssignment/app/src/main/res/layout/activity_light_proximity.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_light_proximity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SmartStreet">
+    tools:context=".LightProximity">
 
     <ImageButton
         android:id="@+id/backButton"
@@ -19,28 +19,17 @@
         app:srcCompat="@drawable/left_arrow" />
 
     <TextView
-        android:id="@+id/smartStreet"
+        android:id="@+id/lightProximity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="88dp"
-        android:text="@string/smart_street"
+        android:text="@string/smart_lighting"
         android:textColor="#253A4B"
         android:textSize="33sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
-        android:id="@+id/proximityLightBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:backgroundTint="@color/Transparent"
-        android:contentDescription="@string/proximity_sensor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/smartStreet"
-        app:srcCompat="@drawable/group_155" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
