--- a/IoTAssignment/app/src/main/res/layout/activity_light_proximity.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_light_proximity.xml
@@ -44,7 +44,7 @@
         android:id="@+id/tv_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="@string/brightness_4000_lumens"
         android:textSize="20sp"
         android:textColor="@color/black"
         android:layout_centerInParent="true" />
