--- a/IoTAssignment/app/src/main/res/layout/activity_smart_door.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_smart_door.xml
@@ -32,40 +32,40 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/doorUnlock"
+        android:id="@+id/doorlock"
         android:layout_width="148dp"
         android:layout_height="208dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="40dp"
         android:backgroundTint="@color/cardview_light_background"
         android:contentDescription="@string/SmartDoor"
         app:layout_constraintBottom_toTopOf="@+id/smart_door"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.164"
+        app:layout_constraintHorizontal_bias="0.068"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stockIn"
         app:srcCompat="@drawable/group_171" />
 
     <ImageButton
-        android:id="@+id/doorLock"
+        android:id="@+id/doorUnlock"
         android:layout_width="148dp"
         android:layout_height="208dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="40dp"
         android:backgroundTint="@color/cardview_light_background"
         android:contentDescription="@string/SmartDoor"
         app:layout_constraintBottom_toTopOf="@+id/smart_door"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.835"
+        app:layout_constraintHorizontal_bias="0.939"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stockIn"
         app:srcCompat="@drawable/group_173" />
 
     <TextView
         android:id="@+id/doorMessageTitle"
-        android:layout_width="149dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="456dp"
-        android:text="Message"
+        android:layout_width="254dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="404dp"
+        android:text="Live Message"
         android:textColor="#253A4B"
         android:textSize="33sp"
         android:textStyle="bold"
@@ -74,17 +74,17 @@
 
     <EditText
         android:id="@+id/doorMessage"
-        android:layout_width="328dp"
-        android:layout_height="104dp"
+        android:layout_width="263dp"
+        android:layout_height="96dp"
         android:layout_alignParentLeft="true"
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:importantForAutofill="no"
         android:gravity="center_vertical|left"
+        android:hint="Message you want to type (Max 16 char)"
+        android:importantForAutofill="no"
         android:inputType=""
         android:labelFor="@id/doorMessageTitle"
-        android:hint="Message you want to type (Max 16 char)"
         app:layout_constraintStart_toStartOf="@id/doorMessageTitle"
         app:layout_constraintTop_toBottomOf="@id/doorMessageTitle" />
 
@@ -93,18 +93,16 @@
         android:layout_width="110dp"
         android:layout_height="59dp"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="24dp"
         android:fontFamily="sans-serif"
         android:text="Send"
         android:textAllCaps="false"
-        android:textSize="15sp"
         android:textColor="@color/black"
+        android:textSize="15sp"
         app:backgroundTint="@color/white"
         app:cornerRadius="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"   />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
