--- a/IoTAssignment/app/src/main/res/layout/activity_temperature_humidity.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_temperature_humidity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SmartAgriculture">
+    tools:context=".TemperatureHumidity">
 
     <ImageButton
         android:id="@+id/backButton"
@@ -24,36 +24,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="88dp"
-        android:text="@string/smart_agriculture"
+        android:text="Temperature &amp; Humidity"
         android:textColor="#253A4B"
         android:textSize="33sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/soil_humidity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/cardview_light_background"
-        android:contentDescription="@string/soil_humidity"
-        app:layout_constraintBottom_toTopOf="@+id/temperature_humidity"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/stockIn"
-        app:srcCompat="@drawable/group_170" />
-
-    <ImageButton
-        android:id="@+id/temperature_humidity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/cardview_light_background"
-        android:contentDescription="@string/temperature_humidity"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/soil_humidity"
-        app:srcCompat="@drawable/group_171" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
