--- a/IoTAssignment/app/src/main/res/layout/activity_human_detection.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_human_detection.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:contentDescription="@string/distance_50m"
-    tools:context=".LightProximity">
+    tools:context=".HumanDetection">
 
     <ImageButton
         android:id="@+id/backButton"
@@ -15,18 +14,22 @@
         android:layout_marginTop="30dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/backbutton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/left_arrow" />
 
     <TextView
-        android:id="@+id/lightProximity"
+        android:id="@+id/smartStreet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="88dp"
-        android:text="@string/smart_lighting"
+        android:text="@string/human_detection"
         android:textColor="#253A4B"
         android:textSize="33sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.mikhaellopez.circularprogressbar.CircularProgressBar
         android:id="@+id/circularProgressBar"
@@ -42,24 +45,36 @@
         app:cpb_round_border="true" />
 
     <TextView
-        android:id="@+id/dis_text"
+        android:id="@+id/cmDetected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/tv_text"
-        android:layout_marginHorizontal="95dp"
         android:layout_centerInParent="true"
-        android:text="@string/distance_50m"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+        android:text="@string/_0"
+        android:textColor="@android:color/black"
+        android:textSize="75sp" />
 
     <TextView
-        android:id="@+id/tv_text"
+        android:id="@+id/tv_totalMax"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/cmDetected"
         android:layout_centerInParent="true"
-        android:layout_marginBottom="1000dp"
-        android:text="@string/brightness_4000_lumens"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+        android:text="@string/_7m"
+        android:textColor="@android:color/black"
+        android:textSize="25sp" />
+
+<!--    <com.mikhaellopez.circularprogressbar.CircularProgressBar-->
+<!--        android:id="@+id/circularProgressBar"-->
+<!--        android:layout_width="200dp"-->
+<!--        android:layout_height="200dp"-->
+<!--        app:cpb_background_progressbar_color="#f2f2f2"-->
+<!--        app:cpb_background_progressbar_width="20dp"-->
+<!--        app:cpb_progress_direction="to_right"-->
+<!--        app:cpb_progressbar_color="#0ceb1e"-->
+<!--        app:cpb_progressbar_width="15dp"-->
+<!--        app:cpb_round_border="true"-->
+<!--        app:cpb_progress_max="60"-->
+<!--        android:layout_centerInParent="true"/>-->
+
 
 </RelativeLayout>
