--- a/IoTAssignment/app/src/main/res/layout/activity_smart_street.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_smart_street.xml
@@ -35,12 +35,28 @@
         android:id="@+id/proximityLightBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:foreground="?android:selectableItemBackground"
         android:backgroundTint="@color/Transparent"
         android:contentDescription="@string/proximity_sensor"
+        app:layout_constraintBottom_toTopOf="@+id/humanDetectionButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/smartStreet"
         app:srcCompat="@drawable/group_155" />
+
+    <ImageButton
+        android:id="@+id/humanDetectionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/Transparent"
+        android:contentDescription="@string/human_detector"
+        android:foreground="?android:selectableItemBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/proximityLightBtn"
+        app:srcCompat="@drawable/group_159" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
