--- a/IoTAssignment/app/src/main/res/layout/activity_human_detection.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_human_detection.xml
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="@string/_0"
-        android:textColor="@android:color/black"
+        android:textColor="#253A4B"
         android:textSize="75sp" />
 
     <TextView
@@ -60,10 +60,32 @@
         android:layout_below="@+id/cmDetected"
         android:layout_centerInParent="true"
         android:text="@string/_7m"
-        android:textColor="@android:color/black"
+        android:textColor="#253A4B"
         android:textSize="25sp" />
 
-<!--    <com.mikhaellopez.circularprogressbar.CircularProgressBar-->
+    <TextView
+        android:id="@+id/accumulate_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="564dp"
+        android:layout_marginStart="55dp"
+        android:textColor="#253A4B"
+        android:textSize="25sp"
+        android:text="@string/accumulated_number" />
+
+    <TextView
+        android:id="@+id/number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="555dp"
+        android:layout_marginStart="311dp"
+        android:layout_marginBottom="70dp"
+        android:textStyle="bold"
+        android:text="@string/_0"
+        android:textColor="#253A4B"
+        android:textSize="35sp" />
+
+    <!--    <com.mikhaellopez.circularprogressbar.CircularProgressBar-->
 <!--        android:id="@+id/circularProgressBar"-->
 <!--        android:layout_width="200dp"-->
 <!--        android:layout_height="200dp"-->
