--- a/IoTAssignment/app/src/main/res/layout/activity_parking_sensor.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_parking_sensor.xml
@@ -60,16 +60,16 @@
         android:textColor="@android:color/black"
         android:textSize="14dp" />
 
-<!--        <TextView-->
-<!--        android:id="@+id/display_msg1"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="100dp"-->
-<!--        android:layout_below="@+id/tv_totalMax"-->
-<!--        android:layout_centerInParent="true"-->
-<!--        android:text=""-->
-<!--        android:textSize="30dp"-->
-<!--        android:textColor="@android:color/black"-->
-<!--        android:textStyle="bold" />-->
+        <TextView
+        android:id="@+id/display_msg1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_below="@+id/tv_totalMax"
+        android:layout_centerInParent="true"
+        android:text=""
+        android:textSize="30dp"
+        android:textColor="@android:color/black"
+        android:textStyle="bold" />
 
 </RelativeLayout>
