--- a/IoTAssignment/app/src/main/res/layout/activity_soil_humidity.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_soil_humidity.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/check_humidity_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="84dp"
@@ -42,48 +42,48 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/soil_humidity2"
         android:layout_width="205dp"
         android:layout_height="36dp"
         android:text="@string/soil_humidity1"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView10"
+        app:layout_constraintBottom_toTopOf="@+id/soil_output"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.194"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stockIn" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/status3"
         android:layout_width="129dp"
         android:layout_height="37dp"
         android:text="@string/Status"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView11"
+        app:layout_constraintBottom_toTopOf="@+id/status_output"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.159"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView10" />
+        app:layout_constraintTop_toBottomOf="@id/soil_output" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/soil_output"
         android:layout_width="207dp"
         android:layout_height="45dp"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/status3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.196"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView2"
+        app:layout_constraintTop_toBottomOf="@id/soil_humidity2"
         />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/status_output"
         android:layout_width="322dp"
         android:layout_height="99dp"
         android:layout_marginBottom="48dp"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/check_humidity_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
