--- a/IoTAssignment/app/src/main/res/layout/activity_smart_lighting.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_smart_lighting.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,22 +15,89 @@
         android:layout_marginTop="30dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/backbutton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/left_arrow" />
 
     <TextView
-        android:id="@+id/stockIn"
+        android:id="@+id/SmartLighting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="88dp"
-        android:text="Smart Lighting"
+        android:text="@string/smart_lighting"
         android:textColor="#253A4B"
         android:textSize="33sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold" />
 
+    <com.mikhaellopez.circularprogressbar.CircularProgressBar
+        android:id="@+id/circularProgressBar"
+        android:layout_width="252dp"
+        android:layout_height="246dp"
+        android:layout_centerInParent="true"
+        app:cpb_background_progressbar_color="#b6bbd8"
+        app:cpb_background_progressbar_width="5dp"
+        app:cpb_progress_direction="to_right"
+        app:cpb_progress_max="25000"
+        app:cpb_progressbar_color="#42A5F5"
+        app:cpb_progressbar_width="10dp"
+        app:cpb_round_border="true" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tv_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:layout_centerInParent="true" />
+
+    <Button
+        android:id="@+id/onButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_text"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="158dp"
+        android:text="ON"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:backgroundTint="@color/white"
+        app:cornerRadius="22dp" />
+
+    <Button
+        android:id="@+id/offButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_text"
+        android:layout_marginStart="240dp"
+        android:layout_marginTop="158dp"
+        android:text="OFF"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:backgroundTint="@color/white"
+        app:cornerRadius="22dp" />
+
+    <TextView
+        android:id="@+id/doorMessageTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_text"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="158dp"
+        android:text="Power"
+        android:textColor="#253A4B"
+        android:textSize="33sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/doorMessageTitle2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_text"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="-222dp"
+        android:text="Auto Mode"
+        android:textColor="#253A4B"
+        android:textSize="33sp"
+        android:textStyle="bold" />
+
+</RelativeLayout>
