--- a/IoTAssignment/app/src/main/res/layout/activity_in_ground.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_in_ground.xml
@@ -23,17 +23,19 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="88dp"
-        android:text="In-ground sensor"
+        android:text="@string/in_ground_sensor"
         android:textColor="#253A4B"
         android:textSize="33sp"
         android:textStyle="bold" />
 
     <com.mikhaellopez.circularprogressbar.CircularProgressBar
         android:id="@+id/circularProgressBar"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="260dp"
+        android:layout_height="260dp"
+        android:layout_below="@+id/stockIn"
+        android:layout_marginTop="50dp"
         app:cpb_background_progressbar_color="#b6bbd8"
-        app:cpb_background_progressbar_width="5dp"
+        app:cpb_background_progressbar_width="10dp"
         app:cpb_progress_direction="to_right"
         app:cpb_progressbar_color="#42A5F5"
         app:cpb_progressbar_width="10dp"
@@ -45,9 +47,45 @@
         android:id="@+id/tv_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CommuniThings"
-        android:textSize="20sp"
+        android:layout_below="@+id/stockIn"
+        android:layout_marginTop="165dp"
+        android:text="@string/communithings"
+        android:textSize="25sp"
         android:textColor="@color/teal_200"
+        android:textStyle="bold"
         android:layout_centerInParent="true" />
+
+    <ImageView
+        android:id="@+id/barrier_gate"
+        android:layout_width="250sp"
+        android:layout_height="150sp"
+        android:layout_below="@+id/circularProgressBar"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="30dp"
+        tools:srcCompat="@tools:sample/avatars"
+        android:contentDescription="@string/barrier_gate" />
+
+    <TextView
+        android:id="@+id/display_msg1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/barrier_gate"
+        android:layout_centerInParent="true"
+        android:text=""
+        android:textSize="30sp"
+        android:textColor="@android:color/black"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/display_msg3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/display_msg1"
+        android:layout_centerInParent="true"
+        android:text=""
+        android:textSize="30sp"
+        android:textColor="@android:color/black"
+        android:textStyle="bold" />
 
 </RelativeLayout>
