--- a/IoTAssignment/app/src/main/res/layout/activity_smart_door.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_smart_door.xml
@@ -92,10 +92,26 @@
         android:id="@+id/sendButton"
         android:layout_width="110dp"
         android:layout_height="59dp"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="16dp"
         android:layout_marginBottom="24dp"
         android:fontFamily="sans-serif"
         android:text="Send"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:backgroundTint="@color/white"
+        app:cornerRadius="22dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/securityButton"
+        android:layout_width="210dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginBottom="24dp"
+        android:fontFamily="sans-serif"
+        android:text="Security Mode"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="15sp"
