--- a/IoTAssignment/app/src/main/res/layout/activity_in_ground.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_in_ground.xml
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/stockIn"
-        android:layout_marginTop="155dp"
+        android:layout_marginTop="150dp"
         android:text="@string/communithings"
         android:textSize="25sp"
         android:textColor="@color/teal_200"
@@ -73,7 +73,7 @@
         android:layout_centerInParent="true"
         android:text=""
         android:textSize="30sp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/teal_200"
         android:textStyle="bold" />
 
     <TextView
@@ -84,7 +84,7 @@
         android:layout_centerInParent="true"
         android:text=""
         android:textSize="30sp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/teal_200"
         android:textStyle="bold" />
 
 </RelativeLayout>
