--- a/IoTAssignment/app/src/main/res/layout/activity_parking_sensor.xml
+++ b/IoTAssignment/app/src/main/res/layout/activity_parking_sensor.xml
@@ -85,6 +85,6 @@
         android:layout_centerInParent="true"
         android:text=""
         android:textSize="30sp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/teal_200"
         android:textStyle="bold" />
 </RelativeLayout>
